Update java-doc, adding english content.